# mcp_excel_server

./: .env.sample  README.md  mcp_article.md  pyproject.toml  requirements.txt
excel_files/: Bank CDR Copy.xlsx  cdr.xlsx
excel_files/excel_files/: test_workbook.xlsx
invalid/: name.xlsx
src/mcp_excel_server/: __init__.py  __main__.py
src/mcp_excel_server/api/: registry.py  server.py
src/mcp_excel_server/api/tools/: __init__.py  excel.py  range.py  workbook.py  worksheet.py
src/mcp_excel_server/config/: __init__.py  settings.py
src/mcp_excel_server/core/: __init__.py  cell_utils.py  data.py  exceptions.py  range.py  sheet.py  validation.py  workbook.py
src/mcp_excel_server/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py
tests/tools/: test_excel_tools.py  test_range_tools.py  test_workbook_tools.py  test_worksheet_tools.py
